# py33

files/: file.csv  file.json  file2.json  filecsv.py  json_.py  main.py  new_py33  test.txt
function/: build_in_functions.py  dicorators.py  scopes.py
git_github/: git.py
parsing/: file.csv  main.py  pyproject.toml  test.py
python.js/: index.html  style.css
strings.py/: classroom.py  comprehensions.py  dict.py  lists.py  logical_exp.py  loops.py  set.py  strings.py  try_except.py
telegram_bot/: main.py  pyproject.toml  requirements.txt
tests_pytest/: data_types.py  linux_command.txt  main.py  pyproject.toml  test_func.py
